--- a/src/willsnetwork/templates/home.html
+++ b/src/willsnetwork/templates/home.html
@@ -7,7 +7,7 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
   </head>
-  <body>
+  <body class="test">
       <img src="{% static 'img/robots.gif' %}" />
       <!-- renders a csrf-token, needed for API -->
       {% csrf_token %}
